--- a/login.html
+++ b/login.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+    <link rel="shortcut icon" href="static/img/favicon.ico" />
 </head>
 <body>
 <h1>Login</h1>
 <form action="public/login.php" method="post">
 <div class="container">
     <label>Email:</label>
-    <input type="email" name="email" placeholder="Enter email" required="true"/>
+    <input type="email" name="email" placeholder="Enter email" required/>
 
     <label>Password:</label>
-    <input type="password" name="password" placeholder="Enter password" required="true"/>
+    <input type="password" name="password" placeholder="Enter password" required/>
 
     <button type="submit">Go</button>
     <a href="register.html">Sign up</a>
-    <!--<a href="register.html">Forgot Password?</a>-->
 </div>
 </form>
 </body>
