--- a/register.html
+++ b/register.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+    <link rel="shortcut icon" href="static/img/favicon.ico" />
 </head>
 <body>
 <h1>Register</h1>
 <form action="public/register.php" method="post">
     <div class="container">
         <label>Name:</label>
-        <input type="text" name="name" placeholder="Enter name" required="true"/>
+        <input type="text" name="name" placeholder="Enter name" required/>
 
         <label>Email:</label>
-        <input type="email" name="email" placeholder="Enter email" required="true"/>
+        <input type="email" name="email" placeholder="Enter email" required/>
 
         <label>Password:</label>
-        <input type="password" name="password" placeholder="Enter password" required="true"/>
+        <input type="password" name="password" placeholder="Enter password" required/>
 
         <button type="submit">Sign up</button>
 
